<resources>
    <string name="app_name">Management</string>
    <string name="item_name_hint">Name of the product</string>
    <string name="quantity_hint">Quantity</string>
    <string name="rate_hint">Rate</string>
    <string name="per_kg_label">per Kg</string>
    <string name="kg_label">Kg</string>
    <string name="save_label">Save</string>
    <string name="date_hint">Date of purschased</string>
    <string name="date_notice">If the date is not entered, current date will be applied automatically.</string>
    <string name="quantity_label">Qty:</string>
    <string name="rate_label">Rate:</string>
    <string name="total_cost_label">Total Cost:</string>
    <string name="date_label">Date:</string>
    <string name="update_item">Update Item</string>
    <string name="add_item">Add Item</string>
    <string name="save">save</string>
    <string name="cancel">Cancel</string>
    <string name="save_item_title">Save Item</string>
    <string name="save_message">Do you want to save the item?</string>
    <string name="update_item_title">Update Item</string>
    <string name="update_message">Do you want to update or keep on editing?</string>
    <string name="update">Update</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_item">Delete</string>
    <string name="delete_message">Do you want to delete this item?</string>
    <string name="keep_updating_message">Do you want to keep updating?</string>
    <string name="empty_shelf">The shelf is currently empty.</string>
    <string name="empty_shelf_description">Empty shelf image</string>
    <string name="per_kg">per Kg</string>
    <string name="per_dozen">per Dozen</string>
    <string name="per_cartoon">per Cartoon</string>

    <string-array name="quantity_description_label">
        <item>Kg</item>
        <item>Dozen(s)</item>
        <item>Cartoon(s)</item>
    </string-array>
</resources>
