<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    tools:context=".AddUpdateActivity">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/toolbar_layout"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tool_bar"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:scrollbars="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/add_update_item_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:ems="10"
                    android:hint="@string/item_name_hint"
                    android:inputType="textPersonName"
                    android:scrollbars="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tool_bar" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    tools:layout_editor_absoluteY="126dp">

                    <EditText
                        android:id="@+id/add_update_item_quantity"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_weight="2.5"
                        android:ems="10"
                        android:hint="@string/quantity_hint"
                        android:inputType="number|numberDecimal"
                        android:text="0"
                        app:layout_constraintStart_toStartOf="@+id/add_update_item_name"
                        app:layout_constraintTop_toBottomOf="@+id/add_update_item_name" />

                    <Spinner
                        android:id="@+id/spinner_quantity_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5"
                        android:entries="@array/quantity_description_label"
                        android:spinnerMode="dialog" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <EditText
                        android:id="@+id/add_update_item_rate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_weight="2"
                        android:ems="10"
                        android:hint="@string/rate_hint"
                        android:inputType="number|numberDecimal"
                        android:text="0"
                        app:layout_constraintStart_toStartOf="@+id/add_update_item_quantity"
                        app:layout_constraintTop_toBottomOf="@+id/add_update_item_quantity" />

                    <TextView
                        android:id="@+id/textView_rate_description"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_weight="1"
                        android:text="@string/per_kg_label"
                        android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                        app:layout_constraintBaseline_toBaselineOf="@+id/add_update_item_rate"
                        app:layout_constraintStart_toEndOf="@+id/add_update_item_rate" />
                </LinearLayout>

            </LinearLayout>

            <CalendarView
                android:id="@+id/add_update_item_date"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:minHeight="300dp"
                android:scrollbars="vertical" />

            <Button
                android:id="@+id/add_update_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/save_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.482"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>