<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <TextView
        android:id="@+id/display_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="4dp"
        android:fontFamily="serif"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="ITEMS" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/quantity_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Menu"
        app:layout_constraintStart_toStartOf="@+id/display_name"
        app:layout_constraintTop_toBottomOf="@+id/display_name" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/rate_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Menu"
        app:layout_constraintBaseline_toBaselineOf="@+id/display_quantity_description"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/total_cost_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Menu"
        app:layout_constraintBaseline_toBaselineOf="@+id/display_date"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/date_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Menu"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/display_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        tools:text="5" />

    <TextView
        android:id="@+id/display_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        tools:text="5.25" />

    <TextView
        android:id="@+id/display_date"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView8"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        tools:text="2025/25/55" />

    <TextView
        android:id="@+id/display_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView7"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        tools:text="2.5" />

    <!--<ImageButton-->
    <!--android:id="@+id/display_edit"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginEnd="8dp"-->
    <!--android:layout_marginRight="8dp"-->
    <!--android:layout_marginBottom="8dp"-->
    <!--app:layout_constraintBottom_toTopOf="@+id/guideline2"-->
    <!--app:layout_constraintEnd_toEndOf="parent"-->
    <!--app:layout_constraintTop_toTopOf="@+id/display_name"-->
    <!--app:srcCompat="@android:drawable/ic_menu_edit" />-->

    <!--<ImageButton-->
    <!--android:id="@+id/display_delete"-->
    <!--android:layout_width="56dp"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginTop="8dp"-->
    <!--android:layout_marginEnd="8dp"-->
    <!--android:layout_marginRight="8dp"-->
    <!--app:layout_constraintBottom_toBottomOf="@+id/display_cost"-->
    <!--app:layout_constraintEnd_toEndOf="parent"-->
    <!--app:layout_constraintTop_toBottomOf="@+id/display_cost"-->
    <!--app:layout_constraintTop_toTopOf="@+id/guideline2"-->
    <!--app:srcCompat="@android:drawable/ic_menu_delete" />-->

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/display_quantity_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="Kg"
        app:layout_constraintBottom_toTopOf="@+id/display_quantity"
        app:layout_constraintStart_toEndOf="@+id/display_quantity"
        app:layout_constraintTop_toBottomOf="@+id/display_quantity" />

    <TextView
        android:id="@+id/display_rate_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="per Kg"
        app:layout_constraintBaseline_toBaselineOf="@+id/display_rate"
        app:layout_constraintStart_toEndOf="@+id/display_rate" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</android.support.constraint.ConstraintLayout>